...
  "settingsSectionAccount": "أنت",
  "settingsSectionDemo": "النموذج الأولي",
  "settingsSectionExperience": "التجربة",
  "settingsSectionLearning": "التعلّم",
  "settingsSectionPrivacy": "الخصوصية",
  "settingsSoundEffects": "المؤثرات الصوتية",
  "settingsEnglish": "English",
  "@settingsEnglish": {
    "description": "Phase 10 settings interface copy.",
    "x-review": true
  },
  "settingsArabic": "العربية",
  "@settingsArabic": {
...
